# pdf-tutor

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  release.yml
assets/: README.md
docs/: DEVELOPMENT.md
pdf_tutor/: __init__.py  __main__.py  config.py
pdf_tutor/ai/: client.py
pdf_tutor/core/: __init__.py  pdf.py
pdf_tutor/learning/: __init__.py  modes.py
pdf_tutor/rendering/: __init__.py  visuals.py
pdf_tutor/ui/: app.py
tests/: test_config.py  test_modes.py  test_pdf.py
