[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-tutor"
version = "1.0.0"
description = "An offline-capable, multi-provider AI study assistant for PDF books with VARK learning modes"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ashutosh Tiwari" }]
keywords = ["pdf", "ai", "education", "study", "vark", "ollama", "gemini", "groq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]
dependencies = [
    "PyMuPDF>=1.24.0",
    "Pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "graphviz>=0.20.0",
]

[project.optional-dependencies]
tts = ["pyttsx3>=2.90", "gTTS>=2.4.0"]
dev = ["pytest>=7.0", "pyttsx3>=2.90", "gTTS>=2.4.0"]

[project.scripts]
pdf-tutor = "pdf_tutor.__main__:main"

[project.urls]
Homepage = "https://github.com/Ashut90/pdf-tutor"
Issues = "https://github.com/Ashut90/pdf-tutor/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
